--- a/exercises/ex12/ex12.md
+++ b/exercises/ex12/ex12.md
@@ -33,9 +33,18 @@ If you are not sure about this type declaration, you can use
 diagram that shows the interactions of the parent thread and the children.
 Is the final value of the counter correct?
 
+The final value of the counter was always correct.
+
 3) Increase the number of children, then compile and run the program again.
 Do you see evidence that the threads are running concurrently?  Do any
 synchronization errors occur?
+
+I increased the number of children to 50 and it was still pretty
+consistently correct. After increasing it to 5000 it was regularly off
+by some amount that was pretty inconsistent. It's clear they are running
+concurrently because the value of the counter isn't always increasing as they
+all print out and some of the increments are missed since the final counter
+value isn't correct for increased numbers of children.
 
 
 ### counter_array.c
@@ -61,6 +70,8 @@ Again, read through the program to be sure you understand it.
 2) Use the Makefile to compile the program and run it.  Do any
 syncronization errors occur?
 
+Yes, in the 1,000,000 positions 120,224 were incorrect.
+
 3) Also in this directory you should fine `mutex.c` and `mutex.h`, which
 contain wrappers for the `pthread_mutex_t` structure provided by pthreads,
 with a more object-oriented interface.
@@ -79,6 +90,16 @@ in `counter_array.c` and `counter_array_mutex.c`, then recompile and time them.
 ```
 
 How much overhead does the synchronization impose?
+
+Without synchronization:
+real	0m0.057s
+user	0m0.072s
+sys	0m0.009s
+
+With synchronization:
+real	0m0.389s
+user	0m0.522s
+sys	0m0.225s
 
 
 
